/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/IBM/idemix/bccsp/schemes/aries";

package aries;

// Credential specifies a credential object
message Credential {
	bytes cred = 1;
	repeated bytes attrs = 2;
}

// Signature is a PoK of a BBS+ signature (a credential)
message Signature {
	bytes main_signature = 1;
	bytes nym_commit = 2;
	bytes nym_proof = 3;
}